# ella-engine

./: .gitignore  Cargo.toml
src/client/: Cargo.toml
src/client/src/: main.rs  webrtc_client_plugin.rs
src/server/: Cargo.toml
src/server/src/: client.html  gstreamer_plugin.rs  main.rs  webrtc_plugin.rs
